--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "nodecap": "^0.1.3",
+    "sync-request": "^2.0.1",
     "norma-javascript": "^0.4.2"
   }
 }
